plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.9'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.backend'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //WebClient - 다른 서버에 HTTP 요청 보내는 것
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    //Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    //OAuth
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    //JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6' , 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    //Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
    //DB
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation "org.springframework.ai:spring-ai-starter-model-google-genai:1.1.2"
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    runtimeOnly 'com.h2database:h2'
    //test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.security:spring-security-test'
	// Spring Integration Core
	implementation 'org.springframework.boot:spring-boot-starter-integration'
	// Spring Integration MQTT
	implementation 'org.springframework.integration:spring-integration-mqtt'
	implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
    // Spring Boot Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    // Spring Actuator (모니터링 툴)
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    // Expo Server SDK
    implementation 'io.github.hlspablo:expo-server-sdk-java:3.1.6'
    // OpenPDF (PDF변환)
    implementation 'com.github.librepdf:openpdf:1.3.30'
    implementation(platform("org.springframework.ai:spring-ai-bom:1.1.1"))
    implementation("org.springframework.ai:spring-ai-starter-model-openai-sdk")
    implementation("org.springframework.ai:spring-ai-starter-model-google-genai")
    //Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // QueryDSL
    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
}

// QueryDSL QClass 생성 경로
def querydslDir = layout.buildDirectory.dir("generated/querydsl")

sourceSets {
    main {
        java {
            srcDir querydslDir
        }
    }
}

tasks.withType(JavaCompile) {
    options.getGeneratedSourceOutputDirectory().set(querydslDir.get().asFile)
}

clean {
    delete querydslDir
}

tasks.named('test') {
    useJUnitPlatform()
}